<resources>
    <string name="resouces_language">en</string>
    <string name="resouces_country">UK</string>
    <string name="app_name">windsing</string>
    <string name="title_activity_home">Messages</string>
    <string name="title_activity_room">Room</string>
    <string name="title_activity_public_rooms">Public Rooms</string>
    <string name="title_activity_room_info">Room info</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_notification_settings">Notification Settings</string>
    <string name="title_activity_member_details">Member Details</string>
    <string name="title_activity_invite_user">Invite Users</string>
    <string name="title_activity_medias_picker">Select Medias</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="stay">Stay</string>
    <string name="leave">Leave</string>
    <string name="send">Send</string>
    <string name="copy">Copy</string>
    <string name="resend">Resend</string>
    <string name="redact">Redact</string>
    <string name="quote">Quote</string>
    <string name="share">Share</string>
    <string name="later">Later</string>
    <string name="paste_username">Paste username</string>
    <string name="view_profile">View profile</string>
    <string name="direct_message">Direct message</string>
    <string name="forward">Forward</string>
    <string name="permalink">Permalink</string>
    <string name="message_details">Message details</string>
    <string name="view_source">View Source</string>
    <string name="view">View</string>
    <string name="set_power_level">Power level</string>
    <string name="chat">Chat</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="more">More</string>
    <string name="chat_with">Chat with </string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="report_content">Report content</string>
    <string name="decline">Decline</string>
    <string name="active_call">Active call</string>
    <string name="ongoing_conference_call"> Ongoing conference call. Join as voice or video.</string>
    <string name="ongoing_conference_call_voice">voice</string>
    <string name="ongoing_conference_call_video">video</string>
    <string name="cannot_start_call">Cannot start the call, please try later</string>
    <string name="room_url">Room URL</string>
    <string name="missing_permissions_warning">"Due to missing permissions, some features may be missing..</string>
    <string name="missing_permissions_to_start_conf_call">You need permission to invite to start a conference in this room</string>
    <string name="missing_permissions_title_to_start_conf_call">Cannot start call</string>
    <string name="device_information">Device information</string>
    <string name="room_no_conference_call_in_encrypted_rooms">Conference calls are not supported in encrypted rooms</string>
    <string name="send_anyway">Send Anyway</string>
    <string name="or">or</string>
    <string name="vector_im_server_url">https://vector.im</string>
    <string name="matrix_org_server_url">https://windsing.com.cn:8448</string>
    <string name="default_hs_server_url">https://windsing.com.cn:8448</string>
    <string name="default_identity_server_url">https://windsing.com.cn:8448</string>
    <string name="action_settings">Settings</string>
    <string name="action_members">Members list</string>
    <string name="action_public_rooms">Public Rooms</string>
    <string name="action_my_rooms">My Rooms</string>
    <string name="action_add_account">Add Account</string>
    <string name="action_remove_account">Remove Account</string>
    <string name="action_leave">Leave Room</string>
    <string name="action_delete">Delete Room</string>
    <string name="action_invite">Invite</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_sign_out_confirmation">For security, logging out will delete any end-to-end encryption keys making previous encrypted chat history unreadable if you log back in.\nSelect export to backup them before signing out.</string>
    <string name="action_enable_room_notification">Enable room notifications</string>
    <string name="action_disable_room_notification">Disable room notifications</string>
    <string name="action_create_room">Create...</string>
    <string name="action_room_info">Room info</string>
    <string name="action_voice_call">Voice Call</string>
    <string name="action_video_call">Video Call</string>
    <string name="action_search_room">Search room</string>
    <string name="action_search_contact">Search contact</string>
    <string name="action_mark_all_as_read">Mark all as read</string>
    <string name="action_quick_reply">Quick reply</string>
    <string name="action_open">Open</string>
    <string name="action_close">Close</string>
    <string name="action_invite_by_name">Invite from identifier</string>
    <string name="action_invite_by_list">Invite from other rooms</string>
    <string name="action_home">Home</string>
    <string name="action_drawer">Extras</string>
    <string name="action_resume_call">Resume call</string>
    <string name="about">About</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="disable">Disable</string>
    <string name="dialog_title_confirmation">Confirmation</string>
    <string name="dialog_title_warning">Warning</string>
    <string name="send_bug_report_include_logs">Send logs</string>
    <string name="send_bug_report_include_crash_logs">Send crash logs</string>
    <string name="send_bug_report">Bug Report</string>
    <string name="send_bug_report_description">Please describe the bug. What did you do? What did you expect to happen? What actually happened?</string>
    <string name="send_bug_report_placeholder">Describe your problem here</string>
    <string name="send_bug_report_logs_description">In order to diagnose problems, logs from this client will be sent with this bug report. If you would prefer to only send the text above, please untick:</string>
    <string name="send_bug_report_alert_message">You seem to be shaking the phone in frustration. Would you like to submit a bug report?</string>
    <string name="send_bug_report_sent">The bug report has been successfully sent</string>
    <string name="send_bug_report_failed">The bug report failed to be sent (%s)</string>
    <string name="send_bug_report_progress">Progress (%s%%)</string>
    <string name="send_files_in">Send into</string>
    <string name="save_files_in">Save into</string>
    <string name="file_is_saved">%1$s is saved.</string>
    <string name="read_receipt">Read</string>
    <string name="downloads">Downloads</string>
    <string name="gallery">Gallery</string>
    <string name="sd_scard">SD card</string>
    <string name="other">Other</string>
    <string name="my_rooms">My rooms</string>
    <string name="create_room">Create Room</string>
    <string name="join_room">Join Room</string>
    <string name="create">Create:</string>
    <string name="sign_in">Sign in</string>
    <string name="username">Username</string>
    <string name="create_account">Register</string>
    <string name="matrix_login">Matrix Login</string>
    <string name="login">Log in</string>
    <string name="logout">Log out</string>
    <string name="hs_url">Home Server URL</string>
    <string name="identity_url">Identity Server URL</string>
    <string name="user">user</string>
    <string name="users">users</string>
    <string name="search">Search</string>
    <string name="create_room_set_alias">Set room alias</string>
    <string name="create_room_alias_hint">room-alias</string>
    <string name="create_room_set_name">Set room name</string>
    <string name="create_room_name_hint">My room</string>
    <string name="join_room_title">Join Room</string>
    <string name="join_room_hint">(e.g. #foo:example.org)</string>
    <string name="membership_invite">Invited</string>
    <string name="membership_join">Joined</string>
    <string name="membership_leave">Left</string>
    <string name="membership_kick">Kicked</string>
    <string name="membership_ban">Banned</string>
    <string name="start_chat">Start chat</string>
    <string name="start_new_chat">Start New Chat</string>
    <string name="start_voice_call">Start Voice Call</string>
    <string name="start_video_call">Start Video Call</string>
    <plurals name="num_members">
        <item quantity="one">%1$s user</item>
        <item quantity="other">%1$s users</item>
    </plurals>
    <string name="invite">Invite</string>
    <string name="kick">Kick</string>
    <string name="ban">Ban</string>
    <string name="unban">Un-ban</string>
    <string name="message_changes_successful">Changes successfully made</string>
    <string name="message_unsaved_changes">There are unsaved changes. Leaving will discard them.</string>
    <string name="option_send_files">Send files</string>
    <string name="option_take_photo_video">Take photo or video</string>
    <string name="option_attach_video">Attach video</string>
    <string name="auth_login">Log in</string>
    <string name="auth_register">Register</string>
    <string name="auth_submit">Submit</string>
    <string name="auth_skip">Skip</string>
    <string name="auth_send_reset_email">Send Reset Email</string>
    <string name="auth_return_to_login">Return to login screen</string>
    <string name="auth_user_id_placeholder">Email or user name</string>
    <string name="auth_password_placeholder">Password</string>
    <string name="auth_new_password_placeholder">New password</string>
    <string name="auth_user_name_placeholder">User name</string>
    <string name="auth_add_email_message">"Add an email address to your account to let users discover you, and let you reset password."</string>
    <string name="auth_add_phone_message">"Add a phone number to your account to let users discover you."</string>
    <string name="auth_add_email_phone_message">"Add an email address and/or a phone number to your account to let users discover you.\n\nEmail address will also let you reset your password."</string>
    <string name="auth_add_email_and_phone_message">"Add an email address and a phone number to your account to let users discover you.\n\nEmail address will also let you reset your password."</string>
    <string name="auth_email_placeholder">Email address</string>
    <string name="auth_opt_email_placeholder">Email address (optional)</string>
    <string name="auth_phone_number_placeholder">Phone number</string>
    <string name="auth_opt_phone_number_placeholder">Phone number (optional)</string>
    <string name="auth_repeat_password_placeholder">Repeat password</string>
    <string name="auth_repeat_new_password_placeholder">Confirm your new password</string>
    <string name="auth_invalid_login_param">Incorrect username and/or password</string>
    <string name="auth_invalid_user_name">User names may only contain letters, numbers, dots, hyphens and underscores</string>
    <string name="auth_invalid_password">Password too short (min 6)</string>
    <string name="auth_missing_password">Missing password</string>
    <string name="auth_invalid_email">"This doesn't look like a valid email address"</string>
    <string name="auth_invalid_phone">"This doesn't look like a valid phone number"</string>
    <string name="auth_email_already_defined">This email address is already defined.</string>
    <string name="room_recents_create_room">Create room</string>
    <string name="room_settings_room_name">Room Name</string>
    <string name="room_settings_topic">Topic</string>
    <string name="room_settings_directory_visibility">List this room in room directory</string>
</resources>